--- a/templates/registration/registration_success.html
+++ b/templates/registration/registration_success.html
@@ -18,9 +18,10 @@
                     <div class="mb-4">
                         <i class="fas fa-rocket fa-4x text-success mb-3"></i>
                         <h4>Welcome to LawyerBuilder!</h4>
-                        <p class="lead text-muted">Your account has been created successfully. You can now start building your professional legal website.</p>
+                        <p class="lead text-muted">Your account has been created successfully. You can now start
+                            building your professional legal website.</p>
                     </div>
-                    
+
                     <div class="row g-3 mb-4">
                         <div class="col-md-4">
                             <div class="card border-success">
@@ -50,7 +51,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="d-grid gap-2">
                         <a href="{% url 'lawyers:dashboard' %}" class="btn btn-success btn-lg">
                             <i class="fas fa-tachometer-alt me-2"></i>Go to Dashboard
@@ -70,4 +71,4 @@
         </div>
     </div>
 </div>
-{% endblock %} 
+{% endblock %}
